[package]
name = "raytracing"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
glam = "0.20.2"
image = "0.23.14"
itertools = "0.10.3"
rayon = "1.5.1"
bvh = { path = "../bvh/bvh" }
rand = "0.8.4"
noise = "0.7.0"
obj-rs = "0.7"


[profile.release]
debug = true
